samples/_failures_safe/1761651284_666596_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a8ce8c2d.c: In function ‘scan_string’:
./samples/SAFE/__tmp_a8ce8c2d.c:144:13: error: expected declaration or statement at end of input
  144 |             if (lexer->input[lexer->position] == '\n') {
      |             ^~
./samples/SAFE/__tmp_a8ce8c2d.c:144:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a8ce8c2d.c:144:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a8ce8c2d.c:144:13: error: expected declaration or statement at end of input
